Proyecto Pair Programming/force-app/main/default/objects/Module__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descriptions__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rol__c</fullName>
        <label>Rol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DataManagement</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Devops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalTime__c</fullName>
        <label>TotalTime</label>
        <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Types__c</fullName>
        <label>Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proyecto</fullName>
                </value>
                <value>
                    <fullName>Modulo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitQuantity__c</fullName>
        <label>UnitQuantity</label>
        <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RolAndSkills</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  Active__c == true,
  AND(
    ISPICKVAL(Skills__c, &quot;&quot;),
    ISPICKVAL(Rol__c, &quot;&quot;)
  ),
  false
)</errorConditionFormula>
        <errorMessage>must have skills and role</errorMessage>
    </validationRules>
</CustomObject>